# offarmpy

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
examples/: __init__.py
examples/usr0/: Fext_DIY.m  INPUT_manifest.json  add_sn_config.py  create_randSn.py  create_varSet.py  env_withoutVar.json  myFuncDIYconfigs.m  sa_config.json  samples.json  sys6cage_DgEls_wT1st.json  sys6cage_DgEls_wT1st_constSn0162.json  sys6cage_DgEls_wT1st_randSn0112.json  sys6cage_DgEls_wT1st_randSn0162.json  test_runOffarm.py.py  test_runParaOffarm.py  usr0_random_samples.csv  varSet_envOnly.json  varSys_exported.json
examples/usr0/results/: results_08-Dec-2025_06-42-54_1.json  results_08-Dec-2025_06-57-41_1.json
src/: Cable.py  Forces.py  Simu.py  __init__.py  __main__.py  cli.py  integrator.py  params.py
usr0/: diy_configs.py  env_withVar.json  env_withoutVar_0Wave.json  lineTypes_23-Feb-2025_12-25-34.json  resultsPre_24-Feb-2025_12-55-13.json  simu_config.json  varSys.json
